# negative-traces

./: Experiments.v  LICENSE  README.md  Traces.v  _CoqProject  coq-negative-traces.opam  local_record.v
.github/workflows/: docker-action.yml
theories/: PrimitiveProps.v  Traces.v
